--- a/css/styles.css
+++ b/css/styles.css
@@ -398,17 +398,27 @@ address > a:hover {
   overflow: hidden;
 }
 .Port_list_overlay {
-  display: flex;
-  align-items: center;
   position: absolute;
   top: 0;
-  width: 100%;
-  height: 100%;
   background-color: var(--link_and_button_color);
-  outline: transparent;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0.9;
 }
+
+.Port_list_shadow:hover .Port_list_overlay,
+.Port_list_shadow:focus .Port_list_overlay {
+  transform: translateY(0%);
+}
+
+.Port_list_overlay > p {
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: var(--letters_and_logo_color_white);
+  padding: 49px 45px 49px 24px;
+}
+
 .Port_list_h3 {
   font-weight: 700;
   font-size: 18px;
@@ -423,13 +433,22 @@ address > a:hover {
 }
 
 /* ⬇ <<Shadow in Portfolio>> ⬇ */
-
-.shadow {
+.TB_list_shadow {
   display: block;
   color: inherit;
 }
-.shadow:hover,
-.shadow:focus {
+.TB_list_shadow:hover,
+.TB_list_shadow:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  outline: transparent;
+}
+.Port_list_shadow {
+  display: block;
+  color: inherit;
+}
+.Port_list_shadow:hover,
+.Port_list_shadow:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
   outline: transparent;
@@ -437,4 +456,42 @@ address > a:hover {
 .Port_list:hover .Port_list_overlay_hidden,
 .Port_list:focus .Port_list_overlay_hidden {
   transform: translateY(0%);
+}
+
+/* ⬇ <<Modal box>> ⬇ */
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  min-height: 581px;
+  background-color: #fff;
+}
+
+.close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
