--- a/css/styles.css
+++ b/css/styles.css
@@ -82,9 +82,25 @@ header {
   letter-spacing: 0.02em;
   color: var(--letters_and_logo_color_black);
   fill: currentColor;
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header_link:hover {
   color: var(--link_and_button_color);
+}
+.current {
+  color: var(--link_and_button_color);
+}
+.current::after {
+  content: '';
+  position: absolute;
+  bottom: -34px;
+  left: -1px;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--link_and_button_color);
+  transition: color, 250ms, cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header_contact {
   display: flex;
@@ -326,9 +342,6 @@ address > a:hover {
 }
 .footer_bg {
   background-color: #ffffff1a;
-}
-.current {
-  color: var(--link_and_button_color);
 }
 
 /* ⬇ <<PORTFOLIO>> ⬇ */
