--- a/css/styles.css
+++ b/css/styles.css
@@ -209,6 +209,23 @@ header {
   letter-spacing: 0.03em;
   margin-bottom: 50px;
 }
+.WWD_list_box {
+  position: relative;
+}
+.WWD_list_p {
+  color: var(--letters_and_logo_color_white);
+  font-weight: 700;
+  font-size: 14px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  background-color: #2f303a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0.8;
+}
 .our_team {
   text-align: center;
   background-color: #f5f4fa;
